[package]
name = "forum-app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mycelium = { path = "../../" }
codec = { package = "parity-scale-codec", version = "3.0.0", features = ['derive'] }
frame-support = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.24", features = ["std"]}
wasm-bindgen = { version = "0.2.81"}
wasm-bindgen-futures = { version = "0.4.31"}
console_error_panic_hook = { version = "0.1.7"}
log = "0.4"
console_log = {version ="0.2", features = ["color"]}
async-recursion = "1.0.0"
reqwest = { version = "0.11.10", features = ["json"] }

